@@ -227,6 +227,7 @@ x2goclient (4.0.4.0-0x2go1) UNRELEASED; urgency=low
     - non_modal_messagebox.{h,cpp}: add new Non_Modal_MessageBox::critical()
       overloaded functions to be able to use informative text and a (forceful,
       if requested) conversion to rich text.
+    - onmainwindow.cpp: prettify non-running sshd error message.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Thu, 19 Feb 2015 13:25:28 +0100
 
